src/test/ui/parser/issue-14303-fncall.stderr
error[E0747]: type provided when a lifetime was expected
  --> $DIR/issue-14303-fncall.rs:13:26
   |
LL |         .collect::<Vec<S<_, 'a>>>();
   |                          ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0747`.
